--- a/src/BuildStats/BuildStats.fsproj
+++ b/src/BuildStats/BuildStats.fsproj
@@ -14,8 +14,6 @@
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.*" />
     <PackageReference Include="Giraffe" Version="3.0.*" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="2.1.*" />
-    <PackageReference Include="Polly.Extensions.Http" Version="2.0.*" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.*" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.*" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="6.5.*" />
@@ -25,6 +23,7 @@
 
   <ItemGroup>
     <Compile Include="Common.fs" />
+    <Compile Include="HttpClients.fs" />
     <Compile Include="BuildHistoryCharts.fs" />
     <Compile Include="PackageServices.fs" />
     <Compile Include="TextSize.fs" />
