--- a/tests/BuildStats.Tests/BuildStats.Tests.fsproj
+++ b/tests/BuildStats.Tests/BuildStats.Tests.fsproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.*" />
     <PackageReference Include="xunit" Version="2.4.*" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.*" />
+    <PackageReference Include="NSubstitute" Version="3.1.*" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\BuildStats\BuildStats.fsproj" />
