--- a/src/BuildStats/BuildStats.fsproj
+++ b/src/BuildStats/BuildStats.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>5.7.0</Version>
+    <Version>5.8.1</Version>
     <AssemblyName>BuildStats</AssemblyName>
     <OutputType>Exe</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.*" />
     <PackageReference Include="Giraffe" Version="3.0.*" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.*" />
