Upped Docker image to use .NET Core 3.1

--- a/src/BuildStats/Dockerfile
+++ b/src/BuildStats/Dockerfile
@@ -1,9 +1,14 @@
-FROM microsoft/dotnet:2.1.5-aspnetcore-runtime
-
-ADD . /app
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build
 WORKDIR /app
 
+COPY src/. /app/src/
+WORKDIR /app/src/BuildStats
+RUN dotnet restore
+RUN dotnet publish -c Release -o published
+
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine AS runtime
+WORKDIR /app
+COPY --from=build /app/src/BuildStats/published .
 ENV ASPNETCORE_URLS http://+:8080
 EXPOSE 8080
-
 ENTRYPOINT ["dotnet", "BuildStats.dll"]
