--- a/src/BuildStats/BuildStats.fsproj
+++ b/src/BuildStats/BuildStats.fsproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>5.17.0</Version>
+    <Version>5.18.0</Version>
     <AssemblyName>BuildStats</AssemblyName>
-    <OutputType>Exe</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
     <RunWorkingDirectory>$(MSBuildThisFileDirectory)</RunWorkingDirectory>
@@ -12,14 +11,17 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.*" />
-    <PackageReference Include="Giraffe" Version="4.1.*" />
-    <PackageReference Include="Serilog.AspNetCore" Version="3.2.*" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.*" />
     <PackageReference Include="NUglify" Version="1.5.*" />
+    <PackageReference Include="Giraffe" Version="4.1.*" />
+    <PackageReference Include="Logfella" Version="6.0.*" />
     <PackageReference Include="Sentry.AspNetCore" Version="2.1.*" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Config.fs" />
+    <Compile Include="Network.fs" />
+    <Compile Include="Logging.fs" />
+    <Compile Include="Environment.fs" />
     <Compile Include="Common.fs" />
     <Compile Include="HttpClients.fs" />
     <Compile Include="BuildHistoryCharts.fs" />
