--- a/src/BuildStats/BuildStats.fsproj
+++ b/src/BuildStats/BuildStats.fsproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>5.25.0</Version>
+    <TargetFramework>net5.0</TargetFramework>
+    <Version>5.26.0</Version>
     <AssemblyName>BuildStats</AssemblyName>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
@@ -11,9 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.*" />
-    <PackageReference Include="NUglify" Version="1.5.*" />
-    <PackageReference Include="Giraffe" Version="4.1.*" />
-    <PackageReference Include="Logfella" Version="6.1.*" />
+    <PackageReference Include="NUglify" Version="1.11.*" />
+    <PackageReference Include="Giraffe" Version="5.0.0-rc-6" />
+    <PackageReference Include="Logfella" Version="7.1.*" />
     <PackageReference Include="Sentry.AspNetCore" Version="2.1.*" />
   </ItemGroup>
 
