--- a/src/BuildStats/Dockerfile
+++ b/src/BuildStats/Dockerfile
@@ -1,4 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0-alpine AS build
+
+ARG version=0.0.0-undefined
+
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
@@ -7,12 +10,10 @@ RUN dotnet restore
 
 # Copy everything else and build
 COPY src/BuildStats/. ./
-RUN dotnet publish -c Release -o published
+RUN dotnet publish /p:Version=$version -c Release -o published
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-alpine AS runtime
 WORKDIR /app
 COPY --from=build /app/published .
-ENV ASPNETCORE_URLS http://+:8080
-EXPOSE 8080
 ENTRYPOINT ["dotnet", "BuildStats.dll"]
